--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -17,6 +17,7 @@
     font-family: $popins;
     color: white;
     font-size: 20px;
+    text-align: center;
     @include tab {
       font-size: 16px;
     }
@@ -32,11 +33,16 @@
       .img {
         display: flex;
         align-items: center;
-        justify-content: center;
+        margin-bottom: -20px;
         gap: 10px;
         img {
-          width: 40px;
+          width: 35px;
           cursor: pointer;
+        }
+
+        a {
+          text-decoration: none;
+          color: $primary;
         }
       }
     }
