--- a/global.scss
+++ b/global.scss
@@ -1,5 +1,6 @@
-$primary: #0ba600;
-$background: #1d1748;
+$primary: #fbb91d;
+$background: #000000;
+$green: #0da502;
 
 $popins: "Poppins", sans-serif;
 
