--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -17,7 +17,7 @@
     font-family: $popins;
     color: white;
     font-size: 20px;
-    text-align: center;
+    text-align: left;
     @include tab {
       font-size: 16px;
     }
