--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -3,7 +3,7 @@
 .side {
   position: absolute;
   height: 100vh;
-  background-color: black;
+  background-color: white;
   right: 0;
   width: 50%;
   display: none;
@@ -15,7 +15,7 @@
   a {
     text-decoration: none;
     font-family: $popins;
-    color: white;
+    color: black;
     font-size: 20px;
   }
 
