--- a/global.scss
+++ b/global.scss
@@ -3,6 +3,9 @@ $background: #000000;
 $green: #0da502;
 
 $popins: "Poppins", sans-serif;
+$inter: "Inter", sans-serif;
+$lato: "Lato", sans-serif;
+$nunito: "Nunito", sans-serif;
 
 $mobWidth: 480px;
 $tabWidth: 768px;
