--- a/src/components/airdrop/airdrop.scss
+++ b/src/components/airdrop/airdrop.scss
@@ -1,8 +1,12 @@
 @import "../../../global.scss";
 
+@font-face {
+  font-family: digit;
+  src: url("../../../public/font/ds_digital/DS-DIGIT.TTF");
+}
+
 .airdrop {
   background-color: #000000;
-  // height: 100vh;
   width: 100vw;
   .airdropCon {
     margin: 30px;
@@ -18,11 +22,11 @@
 
     h4 {
       color: #ffc704;
-      font-size: 22px;
+      font-size: 30px;
       font-weight: 700;
-      font-family: $popins;
-      // padding: 20px;
+      font-family: $lato;
       text-align: center;
+      margin-bottom: -20px;
       @include tab {
         font-size: 14px;
       }
@@ -33,6 +37,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      margin-bottom: -50px;
 
       h4 {
         color: white;
@@ -52,12 +57,11 @@
           flex-direction: column;
           align-items: center;
           color: white;
-          // border: solid 1px lightgray;
           padding: 14px;
           border-radius: 8px;
           width: 30px;
-          font-size: 20px;
-          font-family: $popins;
+          font-size: 36px;
+          font-family: digit;
           font-weight: 700;
           @include tab {
             width: 20px;
@@ -67,6 +71,7 @@
             font-size: 12px;
             font-weight: 400;
             color: white;
+            margin-top: -5px;
             @include tab {
               font-size: 10px;
             }
@@ -100,7 +105,7 @@
           color: white;
           font-family: $popins;
           font-weight: 400;
-          font-size: 14px;
+          font-size: 18px;
           display: flex;
           justify-content: space-between;
           margin-bottom: 5px;
@@ -113,7 +118,7 @@
             text-decoration: none;
             width: "auto";
             font-family: $popins;
-            font-weight: bold;
+            font-weight: 700;
           }
         }
 
@@ -123,7 +128,8 @@
           border: none;
           background-color: white;
           color: black;
-          //   font-family: $popins;
+          font-family: $popins;
+          font-weight: 400;
           @include tab {
             padding: 10px;
           }
@@ -156,7 +162,6 @@
     .airdropDetails {
       width: 400px;
       color: white;
-      // margin-top: 40px;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -182,10 +187,10 @@
         color: #6b6b6b;
         font-family: $popins;
         font-weight: 500px;
-        font-size: 16px;
-        // margin-top: 15px;
+        font-size: 22px;
+        margin-bottom: -5px;
 
-        span{
+        span {
           color: $green;
         }
       }
@@ -197,33 +202,37 @@
         @include tab {
           gap: 10px;
         }
-        .det {
-          display: flex;
-          flex-direction: column;
-          gap: 5px;
-          align-items: center;
-          h5 {
-            color: $green;
+      }
+
+      .det {
+        display: flex;
+        flex-direction: column;
+        gap: 15px;
+        align-items: center;
+        h5 {
+          color: $green;
+          font-weight: 700;
+          font-size: 30px;
+          font-family: digit;
+          @include tab {
+            font-size: 14px;
+          }
+
+          span {
+            font-family: $nunito;
             font-weight: 700;
             font-size: 18px;
-            font-family: $popins;
-            @include tab {
-              font-size: 14px;
-            }
-          }
-          h4 {
             color: white;
-            margin-bottom: -15px;
-            margin-top: -15px;
-            @include tab {
-              font-size: 10px;
-            }
           }
-          p {
-            margin-top: 0;
-            @include tab {
-              font-size: 10px;
-            }
+        }
+
+        p {
+          margin-top: 0;
+          font-family: $inter;
+          font-size: 20px;
+          margin-top: -30px;
+          @include tab {
+            font-size: 10px;
           }
         }
       }
@@ -239,7 +248,7 @@
         border-radius: 8px;
         color: black;
         cursor: pointer;
-        margin-top: 20px;
+        margin-top: 50px;
         align-self: center;
         &:disabled {
           cursor: not-allowed;
