--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -10,11 +10,13 @@
 
   h2 {
     color: $primary;
-    font-family: $popins;
+    font-family: $inter;
+    font-weight: 700;
   }
 
   p {
-    font-family: $popins;
+    font-family: $lato;
+    font-weight: 700;
     color: white;
     font-size: 20px;
     text-align: left;
@@ -33,11 +35,19 @@
       .img {
         display: flex;
         align-items: center;
-        margin-bottom: -20px;
-        gap: 10px;
+        margin-bottom: -5px;
+        justify-content: center;
+        gap: 15px;
         img {
           width: 35px;
           cursor: pointer;
+          background-color: $primary;
+          border-radius: 50%;
+          padding: 2px;
+        }
+
+        p{
+          font-family: $inter;
         }
 
         a {
@@ -54,5 +64,10 @@
         transform: scaleX(-1);
       }
     }
+  }
+
+  .footer{
+    font-family: $popins;
+    font-weight: 400;
   }
 }
