--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -14,14 +14,15 @@
 
   a {
     text-decoration: none;
-    font-family: $popins;
+    font-family: $nunito;
+    font-weight: 700;
     color: black;
     font-size: 20px;
   }
 
   .active {
     color: $primary;
-    text-decoration: underline;
+    // text-decoration: underline;
   }
 
   &.menu {
