--- a/src/components/airdrop/airdrop.scss
+++ b/src/components/airdrop/airdrop.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: digit;
-  src: url("../../../public/font/ds_digital/DS-DIGIT.TTF");
+  src: url("/font/ds_digital/DS-DIGIT.TTF");
 }
 
 .airdrop {
