--- a/src/components/airdrop/airdrop.scss
+++ b/src/components/airdrop/airdrop.scss
@@ -354,4 +354,37 @@
       }
     }
   }
+
+  .referralList {
+    margin-left: 100px;
+  
+    p {
+      font-family: $lato;
+      font-weight: 700;
+      font-size: 18px;
+      // text-align: center;
+      @include tab {
+        margin-left: -80px;
+      }
+    }
+
+    span {
+      font-family: $lato;
+      font-weight: 400;
+      font-size: 20px;
+      margin-left: -40px;
+      @include tab {
+        margin-left: -70px;
+      }
+    }
+
+    .line {
+      background-color: gray;
+      width: 100%;
+      height: 1px;
+      margin-left: -80px;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+  }
 }
