--- a/src/components/airdrop/airdrop.scss
+++ b/src/components/airdrop/airdrop.scss
@@ -7,7 +7,7 @@
 
 .airdrop {
   background-color: #000000;
-  width: 100vw;
+  width: 100%;
   .airdropCon {
     margin: 30px;
     background-color: #191919;
