--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,13 @@
   -webkit-text-size-adjust: 100%;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  /* display: flex;
+  place-items: center; */
+}
+
 /* a {
   font-weight: 500;
   color: #646cff;
@@ -21,13 +28,6 @@
 }
 a:hover {
   color: #535bf2;
-}
-
-body {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  place-items: center;
 }
 
 h1 {
