--- a/src/components/top/top.scss
+++ b/src/components/top/top.scss
@@ -7,7 +7,7 @@
   padding-top: 20px;
 
   .wrapper {
-    width: 80%;
+    width: 90%;
     background-color: black;
     display: flex;
     gap: 10;
@@ -16,7 +16,7 @@
     border-radius: 20px;
     border: 1px solid white;
     @include tab {
-      width: 85%;
+      width: 90%;
       gap: 0px;
       padding: 0px 8px;
     }
@@ -58,6 +58,7 @@
           font-size: 20px;
           @include l {
             margin-left: 15px;
+            font-size: 16px;
           }
 
           @include tab {
