--- a/src/components/top/top.scss
+++ b/src/components/top/top.scss
@@ -5,6 +5,7 @@
   align-items: center;
   justify-content: center;
   padding-top: 20px;
+  background-color: #004b02;
 
   .wrapper {
     width: 90%;
